# Nexus

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  build.py  nexus.py  nexus.spec  pyproject.toml  reflex_nexus.py  reflex_nexus.spec  run.py
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  coveralls.yml  docs.yml  lint.yml  linux.yml  macos.yml  package.yml  project-lint.yml  project-test.yml  publish-package.yml  publish-release.yml  release.yml  setup-deps.yml  test-deps.yml  test.yml  windows.yml
assets/: favicon.icns
docs/: conf.py  contributing.rst  index.rst  requirements.txt
docs/_static/: custom.css
docs/source/: conf.py  index.rst
src/: application.py  event_bus.py  main_window.py  stylesheet.qss
src/app/: application.py  logger.py  main_window.py  menu_bar.py  widget_registry.py
src/component/: _component_manager.py  log_viewer.py  pad_interface.py
src/devices/: reflex_v2.py
src/driver/: reflex_v2.py
src/drivers/: usb_hid.py
src/helper/: __init__.py  decorator.py  file_handler.py
src/os_interface/: __init__.py  base.py  linux.py  mac.py  os_interface.py  unsupported.py
src/widgets/: log_viewer.py  pad_interface.py
tests/: test_test.py
