[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nexus"
version = "0.0.1"
description = "RE:Flex Nexus - Universal Dance Pad Utilities"
authors = ["Brittany Barrett <brittany.l.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://reflex.dance"
repository = "https://github.com/ReflexCreations/Nexus"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
libusb_package = "*"
PySide6 = "*"
pyusb = "*"
pyqtdarktheme = "*"
QtAwesome = "*"

[tool.poetry.dev-dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"
ruff = "*"
pyinstaller = "*"
toml = "*"

[tool.poetry.extras]
build = ["pyinstaller"]
docs = ["sphinx", "toml"]
lint = ["ruff"]

[metadata]
title = "RE:Flex Nexus"
copyright = "2023, Impulse Creations, Ltd"
logo = "assets/favicon.ico"

[tool.poetry.scripts]
app = "nexus:app"
build = "nexus:build"
docs = "nexus:docs"
lint = "nexus:lint"
